[workspace]
exclude = ["errno-gen"]

[package]
name = "linux-errno"
version = "0.0.1"
edition = "2018"
metadata = { msrv = "1.38.0" }

[lib]
path = "src/lib.rs"

[features]
default = []
std = []
iter = []
libc-compat = ["libc"]

# architectures
aarch64 = []
alpha = []
arc = []
arm = []
arm64 = []
csky = []
generic = []
hexagon = []
ia64 = []
loongarch = []
loongarch64 = []
m68k = []
microblaze = []
mips = []
mips64 = []
nios2 = []
openrisc = []
parisc = []
powerpc = []
powerpc64 = []
riscv = []
riscv32 = []
riscv64 = []
s390 = []
s390x = []
sh = []
sparc = []
sparc64 = []
um = []
x86 = []
x86_64 = []
xtensa = []
all = [
  "aarch64",
  "alpha",
  "arc",
  "arm",
  "arm64",
  "csky",
  "generic",
  "hexagon",
  "ia64",
  "loongarch",
  "loongarch64",
  "m68k",
  "microblaze",
  "mips",
  "mips64",
  "nios2",
  "openrisc",
  "parisc",
  "powerpc",
  "powerpc64",
  "riscv",
  "riscv32",
  "riscv64",
  "s390",
  "s390x",
  "sh",
  "sparc",
  "sparc64",
  "um",
  "x86",
  "x86_64",
  "xtensa",
]

[dependencies]
libc = { version = "0.2.144", optional = true }
