[workspace]
exclude = ["errno-gen"]

[package]
name = "linux-errno"
version = "0.0.1"
edition = "2018"
license = "MIT"

[package.metadata]
msrv = "1.38.0"

[package.metdata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "i686-unknown-linux-gnu",
  "arm-unknown-linux-gnueabi",
  "aarch64-unknown-linux-gnu",
  "hexagon-unknown-linux-musl",
  "s390x-unknown-linux-gnu",
  "powerpc-unknown-linux-gnu",
  "powerpc64-unknown-linux-gnu",
  "mips64-unknown-linux-gnuabi64",
  "riscv32gc-unknown-linux-gnu",
  "riscv64gc-unknown-linux-gnu",
  "sparc-unknown-linux-gnu",
  "sparc64-unknown-linux-gnu",
  "loongarch64-unknown-linux-gnu",
]
cargo-args = ["-Z", "build-std"]

[[example]]
name = "list"
required-features = ["iter"]

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = []
iter = []
libc-compat = ["libc"]

# architectures
aarch64 = []
alpha = []
arc = []
arm = []
arm64 = []
csky = []
generic = []
hexagon = []
ia64 = []
loongarch = []
loongarch64 = []
m68k = []
microblaze = []
mips = []
mips64 = []
nios2 = []
openrisc = []
parisc = []
powerpc = []
powerpc64 = []
riscv = []
riscv32 = []
riscv64 = []
s390 = []
s390x = []
sh = []
sparc = []
sparc64 = []
um = []
x86 = []
x86_64 = []
xtensa = []
all = [
  "aarch64",
  "alpha",
  "arc",
  "arm",
  "arm64",
  "csky",
  "generic",
  "hexagon",
  "ia64",
  "loongarch",
  "loongarch64",
  "m68k",
  "microblaze",
  "mips",
  "mips64",
  "nios2",
  "openrisc",
  "parisc",
  "powerpc",
  "powerpc64",
  "riscv",
  "riscv32",
  "riscv64",
  "s390",
  "s390x",
  "sh",
  "sparc",
  "sparc64",
  "um",
  "x86",
  "x86_64",
  "xtensa",
]

[dependencies]
libc = { version = "0.2.144", optional = true }
