[workspace]
exclude = ["errno-gen"]

[package]
name = "linux-errnos"
version = "0.3.3"
authors = ["shurizzle <shura1991@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A list of error numbers"
keywords = ["syscall", "no_std", "linux", "errors", "errno"]
readme = "README.md"
repository = "https://github.com/shurizzle/linux-errnos"
homepage = "https://github.com/shurizzle/linux-errnos"
documentation = "https://docs.rs/linux-errnos"

[package.metadata]
msrv = "1.38.0"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "i686-unknown-linux-gnu",
  "arm-unknown-linux-gnueabi",
  "aarch64-unknown-linux-gnu",
  "hexagon-unknown-linux-musl",
  "s390x-unknown-linux-gnu",
  "powerpc-unknown-linux-gnu",
  "powerpc64-unknown-linux-gnu",
  "mips64-unknown-linux-gnuabi64",
  "riscv32gc-unknown-linux-gnu",
  "riscv64gc-unknown-linux-gnu",
  "sparc-unknown-linux-gnu",
  "sparc64-unknown-linux-gnu",
  "loongarch64-unknown-linux-gnu",
]
cargo-args = ["-Z", "build-std"]

[[example]]
name = "list"
required-features = ["iter"]

[lib]
path = "src/lib.rs"
doctest = false

[features]
default = ["std"]
std = []
iter = []
libc-compat = []
no_std_io-compat = ["no_std_io"]

# architectures
aarch64 = []
alpha = []
arc = []
arm = []
arm64 = []
csky = []
generic = []
hexagon = []
ia64 = []
loongarch = []
loongarch64 = []
m68k = []
microblaze = []
mips = []
mips64 = []
nios2 = []
openrisc = []
parisc = []
powerpc = []
powerpc64 = []
riscv = []
riscv32 = []
riscv64 = []
s390 = []
s390x = []
sh = []
sparc = []
sparc64 = []
um = []
x86 = []
x86_64 = []
xtensa = []
all = [
  "aarch64",
  "alpha",
  "arc",
  "arm",
  "arm64",
  "csky",
  "generic",
  "hexagon",
  "ia64",
  "loongarch",
  "loongarch64",
  "m68k",
  "microblaze",
  "mips",
  "mips64",
  "nios2",
  "openrisc",
  "parisc",
  "powerpc",
  "powerpc64",
  "riscv",
  "riscv32",
  "riscv64",
  "s390",
  "s390x",
  "sh",
  "sparc",
  "sparc64",
  "um",
  "x86",
  "x86_64",
  "xtensa",
]

[dependencies]
no_std_io = { version = "0.6.0", default-features = false, optional = true }
